dist/1.0/bin/sample/retrieveUnpackaged/objects/CTask__c.object
<CustomObject>
    <fields>
        <fullName>Selected_Medium__c</fullName>
        <description>Medium selected by Customer</description>
        <inlineHelpText>Medium selected by Customer</inlineHelpText>
        <label>Medium</label>
        <picklist>
            <picklistValues>
                <fullName>Copper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibre Optic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microwave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sent_to_Customer_Date__c</fullName>
        <description>Actual Date when Proposal has been sent to Customer</description>
        <inlineHelpText>Actual Date when Proposal has been sent to Customer</inlineHelpText>
        <label>Sent to Customer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceID_Ready__c</fullName>
        <formula>IF( NOT(Order_Line__r.Generate_ServiceIDs__c), 
	IF(OR(ISPICKVAL(Order_Line__r.Line_Type__c ,&apos;Disconnection&apos;),ISPICKVAL(Order_Line__r.Line_Type__c ,&apos;Release&apos;),ISPICKVAL(Order_Line__r.Line_Type__c ,&apos;Suspend&apos;)),
		IF(Order_Line__r.Downloaded__c,
			&apos;true&apos;,
			&apos;false&apos;
		),&apos;true&apos;
	),&apos;false&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ServiceID Ready</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Accepted_Date__c</fullName>
        <description>Actual date when customer has accepted service</description>
        <inlineHelpText>Actual date when customer has accepted service</inlineHelpText>
        <label>Service Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Billing_End_Date__c</fullName>
        <description>Billing End Date. Provided by Billing. To be Propagated to Installed Product (Service Component)</description>
        <inlineHelpText>Billing End Date. Provided by Billing. To be Propagated to Installed Product (Service Component)</inlineHelpText>
        <label>Service Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Billing_Start_Date__c</fullName>
        <description>Actual Billing Start Date. Provided by Billing. To be Propagated to Installed Product (Service Component)</description>
        <inlineHelpText>Actual Billing Start Date. Provided by Billing. To be Propagated to Installed Product (Service Component)</inlineHelpText>
        <label>Service Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Bundle_Local_Reference__c</fullName>
        <description>Local Reference of assigned Service Bundle</description>
        <formula>if (NOT( ISNULL(Service_Bundle__c)), Service_Bundle__r.LocalReference__c, &quot;&quot; )</formula>
        <inlineHelpText>Local Reference of assigned Service Bundle</inlineHelpText>
        <label>Service Bundle Local Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Bundle_OL__c</fullName>
        <description>Service Bundle as on Order Line selected on the Task</description>
        <formula>Order_Line__r.Product__c</formula>
        <inlineHelpText>Service Bundle as on Order Line selected on the Task</inlineHelpText>
        <label>Service Bundle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_CID__c</fullName>
        <description>Value of Circuit ID Attribute which is related to Service Component -&gt; Service Bundle</description>
        <formula>IF (NOT(ISNULL( Service_Bundle__c)),Service_Bundle__r.Circuit_ID__c,&quot;&quot; )</formula>
        <inlineHelpText>Value of Circuit ID Attribute which is related to Service Component -&gt; Service Bundle</inlineHelpText>
        <label>Service CID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Component_Local_Reference__c</fullName>
        <description>Local Reference of assigned Service Component</description>
        <formula>if ( NOT(ISNULL(Service_Component__c)), Service_Component__r.LocalReference__c, &quot;&quot; )</formula>
        <inlineHelpText>Local Reference of assigned Service Component</inlineHelpText>
        <label>Service Component Local Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Component__c</fullName>
        <label>Service Component</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Billing_Customer__c</fullName>
        <description>The date from which customer should be  billed for service. To be set in Billing system</description>
        <inlineHelpText>The date from which customer ishould be billed for service. To be set in Billing system</inlineHelpText>
        <label>Start Billing Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Datetime__c</fullName>
        <description>Actual Start Datetime of task execution (automatically calculated based on Delay or Start at fields)</description>
        <inlineHelpText>Actual Start Datetime of task execution (automatically calculated based on Delay or Start at fields)</inlineHelpText>
        <label>Actual Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_at_Datetime__c</fullName>
        <description>Exact datetime of Task execution start</description>
        <inlineHelpText>Exact datetime of Task execution start</inlineHelpText>
        <label>Start at Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_at__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Task execution will start at given datetime</description>
        <inlineHelpText>If checked, Task execution will start at given datetime</inlineHelpText>
        <label>Start at</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Release_Rejected__c</fullName>
        <description>Status of Task that should be set by workflow mechanism if task was not in Rejected status. If not empty, value from this field will be used to set correct Task status after Release from Rejected.</description>
        <label>Status Release Rejected</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Task Subject</description>
        <inlineHelpText>Task Subject</inlineHelpText>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subproduct__c</fullName>
        <description>Subproduct</description>
        <inlineHelpText>Subproduct</inlineHelpText>
        <label>Subproduct</label>
        <picklist>
            <picklistValues>
                <fullName>Colocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Voice - Reselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet VPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Phone - Reselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Media Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet DSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP VPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lambda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared-Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice CPS - Reselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Interconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice VAS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_GTS__c</fullName>
        <description>Determines for which GTS this task is created.</description>
        <inlineHelpText>Determines for which GTS this task is created.</inlineHelpText>
        <label>Target GTS</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Accepting_Time__c</fullName>
        <description>Task Accepted Date - Task Start Date</description>
        <formula>IF(AND(NOT(ISBLANK(Accepted_Date__c)), NOT(ISBLANK(Task_Start_Date__c))), Accepted_Date__c - Task_Start_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Task Accepted Date - Task Start Date</inlineHelpText>
        <label>Task Accepting Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Delayed__c</fullName>
        <formula>IF(
 AND( 
  Due_DateTime__c  &lt;  NOW(),
  OR(  
   NOT(OR(ISPICKVAL(Status__c,&apos;Done&apos;) ,  ISPICKVAL(Status__c,&apos;Completed&apos;), ISPICKVAL(Status__c,&apos;Cancelled&apos;), ISPICKVAL(Status__c,&apos;Pending&apos;) ) ) ,
   AND (IF(ISNULL(PP_Task_Done__c),Due_DateTime__c  &lt;  PP_Task_Completed__c,Due_DateTime__c  &lt;  PP_Task_Done__c), ISPICKVAL(Status__c,&apos;Completed&apos;) )
  )
 )
,  &apos;! delayed&apos;, &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Delayed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Delivery_Time__c</fullName>
        <description>Task Delivery Time (Task Completed - Task Start Date)</description>
        <formula>IF( 
ISBLANK( PP_Task_Completed__c ), 
PP_Task_Done__c, 
PP_Task_Completed__c) - Task_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Task Delivery Time (Task Completed - Task Start Date)</inlineHelpText>
        <label>Task Delivery Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Done_on__c</fullName>
        <description>Date when status of this task was changed to &apos;Done&apos;</description>
        <inlineHelpText>Date when status of this task was changed to &apos;Done&apos;</inlineHelpText>
        <label>Task Done on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Duration__c</fullName>
        <description>Closed Date - Created Date</description>
        <formula>Closed_Date__c -  CreatedDate</formula>
        <inlineHelpText>Closed Date - Created Date</inlineHelpText>
        <label>Task Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Plan_Id__c</fullName>
        <description>Id of Task Plan (Provisioning Plan) from which CTask was created while submitting</description>
        <label>Task Plan Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Plan_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Plan Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Reaction_Time__c</fullName>
        <description>Task Reaction Time (Task Accepted Date - Task Start Date)</description>
        <formula>Accepted_Date__c - Task_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Task Reaction Time (Task Accepted Date - Task Start Date)</inlineHelpText>
        <label>Task Reaction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Start_Date__c</fullName>
        <description>Date, when Task changed status to New / In Progress</description>
        <inlineHelpText>Date, when Task changed status to New / In Progress</inlineHelpText>
        <label>Task Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Work_Duration__c</fullName>
        <description>(Close DateTime or Current DateTime) - Task Accepted Date - On Hold Duration Total</description>
        <formula>IF(NOT(ISBLANK(Accepted_Date__c )), IF(NOT(ISBLANK(Finshed_Date__c)), Finshed_Date__c, NOW()) - Accepted_Date__c - IF(NOT(ISBLANK(On_Hold_Duration_Total__c)), On_Hold_Duration_Total__c, 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Close DateTime or Current DateTime) - Task Accepted Date - On Hold Duration Total</inlineHelpText>
        <label>Task Work Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Parent Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalRequests__c</fullName>
        <description>Total number of requests to be sent to ESB</description>
        <label>Total Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Capex__c</fullName>
        <description>Capex One Off + Capex</description>
        <formula>Capex_One_off__c  +  Capex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Capex One-off + Capex</inlineHelpText>
        <label>Total Capex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Price_MRC__c</fullName>
        <description>Sum(MRC One-Off Capex+ MRC Re-Useable Capex + MRC Monthly Opex)</description>
        <formula>MRC_One_Off_Capex__c*1.1 + MRC_Re_Useable_Capex__c /36+ MRC_Monthly_Opex__c*1.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum(MRC One-Off Capex+ MRC Re-Useable Capex + MRC Monthly Opex)</inlineHelpText>
        <label>Transfer Price MRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Price_NRC__c</fullName>
        <description>Transfer Price NRC</description>
        <formula>NRC_One_Off_Opex__c * 1.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Transfer Price NRC</inlineHelpText>
        <label>Transfer Price NRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Preliminary Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelimindary Design &amp; Budgetary Costing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Costing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm Costing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Design Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Opportunity Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Opportunity Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Opportunity Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Stop Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Billing Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Scoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Provisioning (Modification)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Provisioning (New Install)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Provisioning (Suspension)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_for_Link_CBTC__c</fullName>
        <label>Value for Link to CBCT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Task has already been verified</description>
        <inlineHelpText>Indicates if Task has already been verified</inlineHelpText>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAutomatic__c</fullName>
        <description>Identifies automatic Tasks</description>
        <formula>IF( OR( 
ISPICKVAL(Type__c, &quot;Automatic Provisioning&quot;), 
ISPICKVAL(Type__c, &quot;Automatic Provisioning Rollback&quot;), 
ISPICKVAL(Type__c, &quot;Automatic Provisioning (ST)&quot;), 
ISPICKVAL(Type__c, &quot;Automatic Provisioning (ST) Rollback&quot;), 
ISPICKVAL(Type__c, &quot;Billing Account Creation&quot;), 
ISPICKVAL(Type__c, &quot;Billing Account Creation Rollback&quot;), 
ISPICKVAL(Type__c, &quot;Billing Disconnection&quot;), 
ISPICKVAL(Type__c, &quot;Component Provisioning&quot;), 
ISPICKVAL(Type__c, &quot;Execute OSS Action&quot;), 
ISPICKVAL(Type__c, &quot;Extranet profile creation&quot;), 
ISPICKVAL(Type__c, &quot;IP Activation&quot;), 
ISPICKVAL(Type__c, &quot;IP Activation Rollback&quot;), 
ISPICKVAL(Type__c, &quot;IP Unregistration&quot;), 
ISPICKVAL(Type__c, &quot;IP Unregistration Rollback&quot;), 
ISPICKVAL(Type__c, &quot;OSS Provisioning&quot;), 
ISPICKVAL(Type__c, &quot;Phone Number Activation&quot;), 
ISPICKVAL(Type__c, &quot;Phone Number Release&quot;), 
ISPICKVAL(Type__c, &quot;Set OSS Action&quot;), 
ISPICKVAL(Type__c, &quot;Set OSS Action Rollback&quot;), 
ISPICKVAL(Type__c, &quot;Update of Billing Products&quot;), 
ISPICKVAL(Type__c, &quot;Update of Billing Products - Source Service&quot;), 
ISPICKVAL(Type__c, &quot;Update of CSR Database Rollback&quot;), 
ISPICKVAL(Type__c, &quot;Update of CSR Database&quot;), 
ISPICKVAL(Type__c, &quot;Update OSS Circuit Status&quot;), 
ISPICKVAL(Type__c, &quot;Update OSS Circuit Status Rollback&quot;), 
ISPICKVAL(Type__c, &quot;Update OSS Location Status&quot;)) , &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies automatic Tasks</inlineHelpText>
        <label>isAutomatic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isManual__c</fullName>
        <formula>IF( OR( ISPICKVAL(Type__c, &quot;Manual Provisioning (New Install)&quot;), ISPICKVAL(Type__c, &quot;Manual Provisioning (Modification)&quot;), ISPICKVAL(Type__c, &quot;Manual Provisioning (Suspension)&quot;), ISPICKVAL(Type__c, &quot;Manual Provisioning (Reactivation)&quot;), ISPICKVAL(Type__c, &quot;Manual Provisioning (Disconnection)&quot;), ISPICKVAL(Type__c, &quot;Verification of Billing Account&quot;), ISPICKVAL(Type__c, &quot;Provisioning Verification&quot;), ISPICKVAL(Type__c, &quot;Hardware Request (PL)&quot;), ISPICKVAL(Type__c, &quot;Yellowpages (PL)&quot;), ISPICKVAL(Type__c, &quot;Set Start Billing Date&quot;), ISPICKVAL(Type__c, &quot;Manual Billing (HU)&quot;) ) , &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isManual</label>
        <type>Text</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request__c</columns>
        <columns>Request_info__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>TSK000705083</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Billing_SK</fullName>
        <filterScope>Queue</filterScope>
        <label>Billing SK</label>
        <queue>Billing SK</queue>
    </listViews>
    <listViews>
        <fullName>CSR_HU_Error_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>CSR</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error,New</value>
        </filters>
        <filters>
            <field>Currency__c</field>
            <operation>equals</operation>
            <value>HUF</value>
        </filters>
        <label>CSR HU Error Tasks</label>
    </listViews>
    <listViews>
        <fullName>Component_Provisioning</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Component Provisioning</value>
        </filters>
        <label>Component_Provisioning</label>
        <sharedTo>
            <roles>Costing &amp; Provisioning Manager HU</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Component_Provisioning_Error</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Component Provisioning</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Component_Provisioning_Error</label>
        <sharedTo>
            <roles>Costing &amp; Provisioning Manager HU</roles>
            <roles>Domestic Sales Support HU</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Costing_HU</fullName>
        <columns>Due_Date__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Delay__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Queue</filterScope>
        <label>Costing HU</label>
        <queue>HU Costing</queue>
    </listViews>
    <listViews>
        <fullName>Costing_HU_Domestic</fullName>
        <columns>Due_Date__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Delay__c</columns>
        <columns>Order_Line__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Costing HU Domestic</label>
        <queue>HU Costing Domestic</queue>
    </listViews>
    <listViews>
        <fullName>Costing_SK</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Type__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Costing SK</label>
        <queue>Costing SK</queue>
    </listViews>
    <listViews>
        <fullName>Customer_Care_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Case_Priority__c</columns>
        <columns>Case_Services__c</columns>
        <columns>Description__c</columns>
        <columns>Link_to_OCTT__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CTask__c.Customer_Care</value>
        </filters>
        <filters>
            <field>Done__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Customer Care Tasks</label>
    </listViews>
    <listViews>
        <fullName>Front_Office_Department_SK</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Queue</filterScope>
        <label>Front Office Department SK</label>
        <queue>Front Office Department SK</queue>
    </listViews>
    <listViews>
        <fullName>HUBilling_Error</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Order_Line__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comments__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>HUBilling_Error</label>
        <queue>HU Billing</queue>
        <sharedTo>
            <roles>Back Office Supervisor HU</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HU_ADSL_Disconnection</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>HU ADSL Disconnection</label>
        <queue>HU ADSL Disconnection</queue>
    </listViews>
    <listViews>
        <fullName>HU_BILLINGSUPPNEW</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>HU_BILLINGSUPP_NEW</label>
        <queue>HU Billing</queue>
        <sharedTo>
            <roles>Billing Support HU</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HU_BILLINGSUPP_INPROG</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>HU_BILLINGSUPP_INPROG</label>
        <queue>HU Billing</queue>
        <sharedTo>
            <roles>Billing Support HU</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HU_BILLINGSUPP_err</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comments__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>HU_BILLINGSUPP_err</label>
        <queue>HU Billing</queue>
        <sharedTo>
            <roles>Billing Support HU</roles>
        </sharedTo>
    </listViews>
</CustomObject>